--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="canonical" href="https://www.zmdevs.com/">
+    <meta name="keywords" content="Web apps, Mobile apps, Landing page, Api rest, Design ui ux">
+    <meta name="description" content="ZMDevs, desarollo de software, consultoría IT" />
+    <meta name="robots" content="index,follow"/>
     <meta charset="UTF-8" />
     <link rel="icon"  type="image/png" href="/FavICON.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
