--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="canonical" href="https://www.zmdevs.com/">
-    <meta name="keywords" content="Web apps, Mobile apps, Landing page, Api rest, Design ui ux">
-    <meta name="description" content="ZMDevs, desarollo de software, consultoría IT" />
-    <meta name="robots" content="index,follow"/>
+    <link rel="canonical" href="https://www.zmdevs.com/" />
+    <meta
+      name="keywords"
+      content="Web apps, Mobile apps, Landing page, Api rest, Design ui ux"
+    />
+    <meta
+      name="description"
+      content="ZMDevs, desarollo de software, consultoría IT"
+    />
+    <meta name="robots" content="index,follow" />
     <meta charset="UTF-8" />
-    <link rel="icon"  type="image/png" href="/FavICON.png" />
+    <link rel="icon" type="image/png" href="/FavICON.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>ZMDevs - Consultoría IT</title>
+    <title>ZMDevs - IT Consulting</title>
   </head>
   <body>
     <div id="root"></div>
